k8s/Day14/Kyverno/deploy-sem-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        environment: production      
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     cpu: 0.02
        #     memory: 32Mi
